--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,7 @@ export(convertdate,
 	convertICD10,
 	importSubset,
 	getDrugcodes,
-	writeLatexTable
+	writeLatexTable,
+	writeLatexCountTable,
+	writeLatexMeanTable
 	)
