--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,6 @@ export(convertdate,
 	importSubset,
 	getDrugcodes,
 	writeLatexTable,
-	writeLatexCountTable,
-	writeLatexMeanTable
+	writeLatexMeanTable,
+	writeLatexCountTable
 	)
