Added functions for drawing flow diagrams.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,5 +4,11 @@ export(convertdate,
 	getDrugcodes,
 	writeLatexTable,
 	writeLatexMeanTable,
-	writeLatexCountTable
+	writeLatexCountTable,
+	tableBox,
+	boxGrob,
+	drawDetails.box,
+	xDetails.box,
+	yDetails.box
 	)
+	
